mock log4j  bug!